--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.8",
+    "@netlify/angular-runtime": "^2.2.2",
     "@tailwindcss/postcss": "^4.0.8",
     "daisyui": "^5.0.0-beta.8",
     "express": "^4.18.2",
